@@ -1,3 +1,6 @@
+2008-10-29 yusei
+* Publication Section fields are now translatable.
+
 2008-10-14 yusei
 * Start to develop version 5.3.
 
